Interface: prevent sidebar layout shift with explicit scroll area

--- a/packages/interface/src/components/interface-skeleton/style.scss
+++ b/packages/interface/src/components/interface-skeleton/style.scss
@@ -109,7 +109,7 @@ html.interface-interface-skeleton__html-container {
 }
 
 .interface-interface-skeleton__sidebar {
-	overflow: auto;
+	overflow: scroll;
 
 	@include break-medium() {
 		border-left: $border-width solid $gray-200;
